--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>김대황</title>
 </head>
 <body>
-    <main style="width: 100%; height: 100svh; display: flex; justify-content: center; align-items: center;">
+    <main style="width: 100%; height: 100svh; display: flex; flex-direction: column; justify-content: center; align-items: center;">
         <img src="./src/logo.jpg" alt="logo">
         <h1>김대황 가보자고!</h1>
     </main>
